pyilper (1.8.5~beta1) focal; urgency=medium

  * beta version
  * new virtual raw drive device tab added
  * fixed crash when pasting text in the terminal
  * configuration file version check on startup

 -- focal <achim@trillian>  Sun, 28 Nov 2021 20:38:03 +0100

pyilper (1.8.4) focal; urgency=medium

  * Plotter Tab: activate ENTER key after having digitized or entered a coordinate

 -- bionic <achim@trillian>  Tue, 02 Mar 2021 09:13:34 +0100

pyilper (1.8.3) bionic; urgency=medium

  * disable right clicks into an empty directory listing in the drive tab
  * left click on a selected row in the directory listing of the drive tab now deselects it
  * fix a bug that the file management controls in the drive tab were not disabled if no valid version of the <i>LIFUTILS</i> was installed.<
  * fix a bug that not all errormessages of lifutils are shown in the graphical user interface

 -- bionic <achim@trillian>  Wed, 29 Apr 2020 11:54:26 +0200

pyilper (1.8.2) bionic; urgency=medium

  * Python 3.8 compatibility 
  * Corrected the drive name to "HP9114B" in the drive type selection box of the drive tab (hint from Christoph Gießelink)
  * Fixed wrong address view for addresses > 15 and changed device # address view to HP71 style in the virtual HP-IL device status window (courtesy by Christoph Gießelink)
  * Clear device buffers on LIF Image file change and clear disk drive status after successful reading or writing (hint from Christoph Gießelink)

 -- bionic <achim@trillian>  Mon, 03 Feb 2020 10:12:05 +0100

pyilper (1.8.1) bionic; urgency=medium

  * added/improved HP-75 text and lex file support in the file management functions of the drive tab

 -- bionic <achim@trillian>  Fri, 31 May 2019 13:39:08 +0200

pyilper (1.8.0) bionic; urgency=medium

  * added HP2225 thermal printer emulator
  * added HP-75 terminal and keyboard support
  * refactoring in lifexec: moved to the subprocess.run interface
  * minimum required Python version is now 3.5
