@@ -303,6 +303,7 @@ coordinate</li>
 <li>New device tab for virtual RAW disk drive devices.</li>
 <li>Fixed crash when pasting text in the terminal.</li>
 <li>Configuration file version check on startup.</li>
+<li>Tab title text color problem (macOS Big Sur) fixed.</li>
 </ul>
 <!-- End content -->
 
