@@ -4,6 +4,7 @@ pyilper (1.8.5~beta1) focal; urgency=medium
   * new virtual raw drive device tab added
   * fixed crash when pasting text in the terminal
   * configuration file version check on startup
+  * tab title text color problem (macOS Big Sur) fixed
 
  -- focal <achim@trillian>  Sun, 28 Nov 2021 20:38:03 +0100
 
